--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,7 @@
 				<configuration>
 					<systemPropertyVariables>
 						<!-- General constants -->
+						<os>win</os>
 						<landingpage>http://rightmove.co.uk</landingpage>
 					</systemPropertyVariables>
 					<suiteXmlFiles>
