--- a/pom.xml
+++ b/pom.xml
@@ -13,11 +13,14 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
+		<maven.compiler.source>1.8</maven.compiler.source>
+		<maven.compiler.target>1.8</maven.compiler.target>
+
 		<!-- This is where we can group test suites -->
 		<settersuite>sales.xml</settersuite>
-		<lettersuit>letter.xml</lettersuit>
+		<lettings>lettings.xml</lettings>
 		<!-- We can assign a default suites property to use with the surefire plugin -->
-		<defaultsuites>${settersuite},${lettersuit}</defaultsuites>
+		<defaultsuites>${settersuite},${lettings}</defaultsuites>
 
 	</properties>
 
@@ -71,6 +74,8 @@
 							<value>4</value>
 						</property>
 					</properties>
+					<parallel>classes</parallel>
+					<threadCount>10</threadCount>
 				</configuration>
 
 			</plugin>
